--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HW06_Group22</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+
 </resources>
